--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -127,7 +127,7 @@ The inference problem amounts to produce samples from the posterior distribution
 The response of the LISA instrument to a given waveform shows a time- and frequency-dependence~\cite{Cutler97, Larson+99, CR02, MB18}.
 Contrary to LIGO and Virgo, which are approximately fixed in an inertial frame during the observation of any merger, the LISA constellation will move around the Sun and change its orientation appreciably if the signal is observable for a significant fraction of a year, leading to additional modulations of the signals. Furthermore, due to the LISA arm length, for many sources the long-wavelength approximation will not hold, which introduces a frequency-dependence in the response. As we will see in this study, a proper treatment of these effects is necessary in order to understand degeneracies between the source parameters.
 
-Previous parameter recovery studies with LISA used mainly simplified signal and response models, and often relied on a Fisher matrix approximation to parameter recovery instead of full Bayesian simulations. Numerous works used the combination of inspiral-only post-Newtonian waveforms (sometimes including precession), the low-frequency approximate response and Fisher matrix estimates; examples include~\cite{Cutler97, Vecchio03, Arun06, Berti+04, LangHughes06}. The Mock LISA Data Challenges~\cite{MLDC09} used such a setup for the signals and the response, albeit moving towards MCMC tools with a focus on detection. Bayesian methods going beyond Fisher albeit still with inspiral signals were developed in~\cite{Brown+07, CornishPorter06a, Crowder+06, Wickham+06, Roever+07, Feroz+09, GairPorter09, Petiteau+09, PorterCarre13, PorterCornish15}. The importance of the higher harmonics for LISA was stressed already in several studies~\cite{Arun+07a, TriasSintes07, PorterCornish08, McWilliams+09}. To explore the importance of the merger-ringdown using Numerical relativity waveforms, the studies~\cite{Thorpe+08, McWilliams+09, McWilliams+10, McWilliams+11} used a Fisher approach, while~\cite{Babak+08} used Bayesian analyses limited to extrinsic parameters. More recently, in the context of the redesign of the LISA mission~\cite{elisa13}, the study~\cite{Klein+15} explored the performance of various LISA instrumental designs using Fisher matrix estimates and inspiral signals, but used a reweighting procedure to represent the role of the merger-ringdown signal. To this date, no full Bayesian parameter estimation studies with IMR signals have been performed.
+Previous parameter recovery studies with LISA used mainly simplified signal and response models, and often relied on a Fisher matrix approximation to parameter recovery instead of full Bayesian simulations. Numerous works used the combination of inspiral-only post-Newtonian waveforms (sometimes including precession), the low-frequency approximate response and Fisher matrix estimates; examples include~\cite{Cutler97, Vecchio03, Arun06, Berti+04, LangHughes06}. The Mock LISA Data Challenges~\cite{MLDC09} used such a setup for the signals and the response, albeit moving towards MCMC tools with a focus on detection. Bayesian methods going beyond Fisher albeit still with inspiral signals were developed in~\cite{Brown+07, CornishPorter06a, Crowder+06, Wickham+06, Roever+07, Feroz+09, GairPorter09, Petiteau+09, PorterCarre13, PorterCornish15}. The importance of the higher harmonics for LISA was stressed already in several studies~\cite{Arun+07a, TriasSintes07, PorterCornish08, McWilliams+09}. To explore the importance of the merger-ringdown using Numerical relativity waveforms, the studies~\cite{Thorpe+08, McWilliams+09, McWilliams+10, McWilliams+11} used a Fisher approach, while~\cite{Babak+08} used Bayesian analyses limited to extrinsic parameters. More recently, in the context of the redesign of the LISA mission~\cite{elisa13}, the study~\cite{Klein+15} explored the performance of various LISA instrumental designs using Fisher matrix estimates and inspiral signals, but used a reweighting procedure to represent the role of the merger-ringdown signal. We also note a recent work~\cite{Baibhav+20} investigating parameter recovery for ringdown-dominated signals. To this date, no full Bayesian parameter estimation studies with IMR signals have been performed.
 
 On the other hand, important advances have been registered in recent years in providing fast and accurate waveforms including the merger and ringdown for the LIGO/Virgo data analysis, through phenomenological waveforms~\cite{Khan+15, London+17}, Reduced Order Models (ROM) of Effective One Body Waveforms~\cite{Puerrer14, Bohe+16}, and numerical relativity surrogates~\cite{Blackman+17b, Varma+18}. This progress has yet to be transposed to LISA applications.
 
@@ -597,7 +597,7 @@ We compute the derivatives by second-order finite differences, with the signal i
 
 We focus our analysis on a single set of mass parameters, representative of canonical SMBHB sources expected for LISA~\cite{Barausse12, Klein+15, LISA2017}: we pick a total redshifted mass $M=m_{1}+m_{2} = 2\times10^{6} M_{\odot}$ and a mass ratio $q=m_{1}/m_{2} = 3$, and place the source at a redshift $z=4$. The corresponding source-frame total mass is $M/(1+z) = 4\times10^{5} M_{\odot}$. The inclination plays an important role in deciding the importance of higher harmonics; we set it to the median value $\iota = \pi/3$. We will study in detail two such systems, named cases I and II, stemming from a series of twelve runs with randomized orientation parameters, and chosen to exemplify qualitative differences in the parameter estimation. The parameters are summarized in Table~\ref{tab:MBHBparams}, along with the SNR of these signals with and without higher harmonics. The randomized orientations and the inclusion of higher harmonics both have a sizeable impact on the SNR.
 
-We note that, by contrast with current ground-based observations that are horizon-limited and that have a strong selection bias towards systems with favorable orientations (face-on or face-off)~\cite{}, the LISA horizon for SMBHB systems extends to essentially the entirety of the observable universe~\cite{LISA2017} \cite{}; it is therefore natural to consider randomized orientations.
+We note that, by contrast with current ground-based observations that are horizon-limited and that have a strong selection bias towards systems with favorable orientations (face-on or face-off), the LISA horizon for SMBHB systems extends to essentially the entirety of the observable universe~\cite{LISA2017}; it is therefore natural to consider randomized orientations.
 
 \begin{table}
 	\begin{tabular}{|c||c|c|}
@@ -882,7 +882,7 @@ When adding back the LISA motion while still ignoring the frequency-dependence i
 	\label{tab:MBHBdegen}
 \end{table} 
 
-Thus, we have found that in the \textit{Frozen low-$f$} approximation for the response we expect a pattern of degeneracy of eight degenerate positions in the sky (with certain rules for inclination and polarization). Table~\ref{tab:MBHBdegen} summarizes the qualitative picture of degeneracy breaking by the features of the response. We will see in Sec.~\ref{sec:SMBHPEacctime} that the eight-mode degeneracy pattern indeed appears when doing a pre-merger analysis; on the other hand, in results Figs.~\ref{fig:PEsmbh22hmCase0} and~\ref{fig:PEsmbh22hmCase9} for full IMR signals, out of the eight possible sky modes only the \textit{reflected} mode~\eqref{eq:degenreflection} survives. We will investigate in detail in Sec.~\ref{sec:MBHBPEacctime} how time-dependence and frequency-dependence in the response break part, but not all, of the degeneracies.
+Thus, we have found that in the \textit{Frozen low-$f$} approximation for the response we expect a pattern of degeneracy of eight degenerate positions in the sky (with certain rules for inclination and polarization). Table~\ref{tab:MBHBdegen} summarizes the qualitative picture of degeneracy breaking by the features of the response. We note that the recent work~\cite{Baibhav+20}, focusing on low-frequency ringdown-dominated signals for which the LISA motion can be neglected, remarked the same 8-modes sky degeneracy that we described in this section. We will see in Sec.~\ref{sec:MBHBPEacctime} that the eight-mode degeneracy pattern indeed appears when doing a pre-merger analysis; on the other hand, in results Figs.~\ref{fig:PEsmbh22hmCase0} and~\ref{fig:PEsmbh22hmCase9} for full IMR signals, out of the eight possible sky modes only the \textit{reflected} mode~\eqref{eq:degenreflection} survives. We will investigate in detail in Sec.~\ref{sec:MBHBPEacctime} how time-dependence and frequency-dependence in the response break part, but not all, of the degeneracies. 
 
 However, this analysis does not explain why one obtains, with a zero noise realization, marginalized posteriors for the sky positions that appear biased from the injected signal, when ignoring higher harmonics. This is the question that we will address in the next Section.
 
@@ -1270,7 +1270,7 @@ Our exploratory work calls for a number of natural extensions that will help us 
 
 First, we only investigated a handful of sources. In particular, we chose our SMBHB systems to be representative of the bulk of the population; they are not ``golden sources'', i.e. they are not part of the tail of lower-redshift systems that would provide us with the most interesting science outputs with LISA, notably in terms of electromagnetic counterparts. It is likely that the parameter recovery here will be different, with a longer detectable signal and the motion of LISA playing a role in the premerger localization. We also limited ourselves to a single redshifted mass, while the morphology of the signals will change strongly between the two ends of the LISA spectrum, from intermediate mass black holes $M\sim 10^{3} M_{\odot}$ to massive systems $M>10^{7} M_{\odot}$.
 
-In the future, it will be important to incorporate more physics in our waveform models. In this study our signals were limited to non-spinning, circularized systems. The aligned components of the spin will play a role by allowing degeneracies between masses and spin magnitudes, but we can expect that they will not affect qualitatively the posterior distributions for extrinsic parameters. Precession and eccentricity, however, will change the harmonic structures of the signals and play an important role.
+In the future, it will be important to incorporate more physics in our waveform models. In this study our signals were limited to non-spinning, circularized systems. The aligned components of the spin will play a role by allowing degeneracies between masses and spin magnitudes, but we can expect that they will not affect qualitatively the posterior distributions for extrinsic parameters; this will be investigated in a forthcoming publication~\cite{Katz+20}. Precession and eccentricity, however, will change the harmonic structures of the signals and play an important role.
 
 A limitation of our method is that, in order to accelerate the likelihood computation, set the noise realization to zero. Although we do not expect that the noise realization will cause drastic changes, with in particular the structure of degeneracies of signals in parameter space remaining relevant, fast likelihoods for noisy data would be a welcome addition to our methods. Analyzing signals with a noise injection will also become more important when considering more realistic instrumental noise models.
 
