--- a/paper/references.bib
+++ b/paper/references.bib
@@ -3504,4 +3504,32 @@
   primaryclass  = {gr-qc},
 }
 
+@Article{Katz+20,
+  author  = {Katz, M. L. and Larson, S. L. and Marsat, S. and Babak, S. and Chua. A. J. K.},
+  journal = {In preparation},
+  year    = {2020},
+}
+
+@Article{Baibhav+20,
+  author        = {{Baibhav}, Vishal and {Berti}, Emanuele and {Cardoso}, Vitor},
+  title         = {{LISA parameter estimation and source localization with higher harmonics of the ringdown}},
+  journal       = {arXiv e-prints},
+  year          = {2020},
+  pages         = {arXiv:2001.10011},
+  month         = {Jan},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2020arXiv200110011B},
+  archiveprefix = {arXiv},
+  eid           = {arXiv:2001.10011},
+  eprint        = {2001.10011},
+  keywords      = {General Relativity and Quantum Cosmology, Astrophysics - High Energy Astrophysical Phenomena},
+  primaryclass  = {gr-qc},
+}
+
+@Article{MarsatBabak20,
+  author  = {Marsat, S. and Babak, S.},
+  journal = {In preparation},
+  year    = {2020},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
