--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -120,24 +120,24 @@ Gravitational waves from the coalescence of black hole binaries are now regularl
 
 Ground-based interferometers are fundamentally limited at low frequency by terrestrial noise, and cannot be used to study mergers of compact objects much heavier than a few $ 10^2 \Msol$. The spacebourne detector LISA~\cite{LISA2017} will overcome this limitation, enabling the observation and precise characterization of gravitational waves from binary black holes, from coalescences of systems with millions of $\Msol$ (supermassive black hole binaries, SMBHB) to the inspiral of systems with tens of $\Msol$ (stellar-mass black hole binaries, SBHB). The observation of black hole mergers and inspirals in the LISA frequency band will yield major scientific rewards, and they form the main target of LISA among other classes of sources.
 
-In order to realize the full scientific objective of LISA with respect to black hole mergers, adequate data analysis tools must be prepared in advance. Similarly to what happens in LIGO and Virgo, one has to first identify the presence of a merger waveform in the LISA data, possibly in the presence of other superposed signals (notably galactic white dwarfs binaries~\cite{Nelemans+01}), and then infer the distribution of the physical parameters of its source from the data, enabling the construction of a catalog of black hole binaries. Inferring the parameters of binaries, in particular their distance and sky location, and refining the analysis as the signal accumulates with observation time, will also be necessary to organize multimessenger observations of their late inspirals and mergers~\cite{ArmitageNatarajan02, DalCanton+19}. Cosmological applications using LISA observations as standard sirens~\cite{Schutz86, Tamanini+16} also depend on the ability to localize individual sources. Understanding parameter estimation of SBHBs will also be important to understand the outcomes and challenges of possible multiband gravitational-wave observations~\cite{Sesana16}. In this paper we focus on the latter part of the analysis problem, i.e.~the inference of the black hole parameters from the LISA data, once we have reasons to believe the presence of the signal in the data, leaving aside the identification problem. We also limit our analysis to extrinsic parameters and ignore the effect of superposed gravitational wave signals from various sources.
+In order to realize the full scientific objective of LISA with respect to black hole mergers, adequate data analysis tools must be prepared in advance. Similarly to what happens in LIGO and Virgo, one has to first identify the presence of a merger waveform in the LISA data, possibly in the presence of other superposed signals (notably galactic white dwarfs binaries~\cite{Nelemans+01}), and then infer the distribution of the physical parameters of its source from the data, enabling the construction of a catalog of black hole binaries. Inferring the parameters of binaries, in particular their distance and sky location, and refining the analysis as the signal accumulates with observation time, will also be necessary to organize multimessenger observations of their late inspirals and mergers~\cite{ArmitageNatarajan02, DalCanton+19}. Cosmological applications using LISA observations as standard sirens~\cite{Schutz86, Tamanini+16} also depend on the ability to localize individual sources. Parameter estimation of SBHBs will also be necessary for multiband gravitational-wave astronomy~\cite{Sesana16}. In this paper we focus on the latter part of the analysis problem, i.e.~the inference of the black hole parameters from the LISA data, leaving aside the detection problem and assuming the presence of the signal in the data. We also limit our analysis to extrinsic parameters and ignore the effect of superposed gravitational wave signals from various sources.
 
-The inference problem amounts to produce samples from the posterior distribution for source parameters, related by Baye's theorem to the likelihood function, i.e.~the probability of observing the measured data given the source parameters and a model of the source and detector. In LISA, this problem is more complex than in kilometer-scale ground-based interferometers, as additional challenges arises from the much larger expected signal-to-noise ratios (SNRs) for high-mass systems, or the much longer duration of the waveform for low-mass systems. In particular, for SMBHBs, the large SNR will require a very accurate modeling of the waveform, including the merger and ringdown regimes, the effects of spin and corrections of higher harmonics in the signal beyond the quadrupole.
+The inference problem amounts to drawing samples from the posterior distribution for source parameters, related by Bayes' theorem to the likelihood function, i.e.~the probability of observing the measured data given the source parameters and a model of the source and detector. In LISA, this problem is more complex than in kilometer-scale ground-based interferometers, as additional challenges arise from the much larger expected signal-to-noise ratios (SNRs) for high-mass systems, or the much longer duration of the waveform for low-mass systems. In particular, for SMBHBs, the large SNR will require a very accurate modeling of the waveform, including the merger and ringdown regimes, the effects of spin and corrections of higher harmonics in the signal beyond the quadrupole.
 
 The response of the LISA instrument to a given waveform shows a time- and frequency-dependence~\cite{Cutler97, Larson+99, CR02, MB18}.
 Contrary to LIGO and Virgo, which are approximately fixed in an inertial frame during the observation of any merger, the LISA constellation will move around the Sun and change its orientation appreciably if the signal is observable for a significant fraction of a year, leading to additional modulations of the signals. Furthermore, due to the LISA arm length, for many sources the long-wavelength approximation will not hold, which introduces a frequency-dependence in the response. As we will see in this study, a proper treatment of these effects is necessary in order to understand degeneracies between the source parameters.
 
-Previous parameter recovery studies with LISA used mainly simplified signal and response models, and often relied on a Fisher matrix approximation to parameter recovery instead of full Bayesian simulations. Numerous works used the combination of inspiral-only post-Newtonian waveforms (sometimes including precession), the low-frequency approximate response and Fisher matrix estimates; examples include~\cite{Cutler97, Vecchio03, Arun06, Berti+04, LangHughes06}. The Mock LISA Data Challenges~\cite{MLDC09} used such a setup for the signals and the response, albeit moving towards MCMC tools with a focus on detection. Bayesian methods going beyond Fisher albeit still with inspiral signals were developed in~\cite{Brown+07, CornishPorter06a, Crowder+06, Wickham+06, Roever+07, Feroz+09, GairPorter09, Petiteau+09, PorterCarre13, PorterCornish15}. The importance of the higher harmonics for LISA was stressed already in several studies~\cite{Arun+07a, TriasSintes07, PorterCornish08, McWilliams+09}. To explore the importance of the merger-ringdown using Numerical relativity waveforms, the studies~\cite{Thorpe+08, McWilliams+09, McWilliams+10, McWilliams+11} used a Fisher approach, while~\cite{Babak+08} used Bayesian analyses limited to extrinsic parameters. More recently, in the context of the redesign of the LISA mission~\cite{elisa13}, the study~\cite{Klein+15} explored the performance of various LISA instrumental designs using Fisher matrix estimates and inspiral signals, but used a reweighting procedure to represent the role of the merger-ringdown signal. We also note a recent work~\cite{Baibhav+20} investigating parameter recovery for ringdown-dominated signals. To this date, no full Bayesian parameter estimation studies with IMR signals have been performed.
+Previous parameter recovery studies with LISA used mainly simplified signal and response models, and often relied on a Fisher matrix approximation to parameter recovery instead of full Bayesian simulations. Numerous works used the combination of inspiral-only post-Newtonian waveforms (sometimes including precession), the low-frequency approximate response and Fisher matrix estimates~\cite{Cutler97, Vecchio03, Arun06, Berti+04, LangHughes06}. The Mock LISA Data Challenges~\cite{MLDC09} used such a setup for the signals and the response, albeit moving towards MCMC tools with a focus on detection. Bayesian methods going beyond Fisher, albeit still restricted to inspiral signals, were developed in~\cite{Brown+07, CornishPorter06a, Crowder+06, Wickham+06, Roever+07, Feroz+09, GairPorter09, Petiteau+09, PorterCarre13, PorterCornish15}. The importance of the higher harmonics for LISA was stressed already in several studies~\cite{Arun+07a, TriasSintes07, PorterCornish08, McWilliams+09}. To explore the importance of the merger-ringdown using Numerical relativity waveforms, the studies~\cite{Thorpe+08, McWilliams+09, McWilliams+10, McWilliams+11} used a Fisher approach, while~\cite{Babak+08} used Bayesian analyses limited to extrinsic parameters. More recently, in the context of the redesign of the LISA mission~\cite{elisa13}, the study~\cite{Klein+15} explored the performance of various LISA instrumental designs using Fisher matrix estimates and inspiral signals, but used a reweighting procedure to represent the role of the merger-ringdown signal. We also note a recent work~\cite{Baibhav+20} investigating parameter recovery for ringdown-dominated signals. To this date, no full Bayesian parameter estimation studies with IMR signals have been performed.
 
 On the other hand, important advances have been registered in recent years in providing fast and accurate waveforms including the merger and ringdown for the LIGO/Virgo data analysis, through phenomenological waveforms~\cite{Khan+15, London+17}, Reduced Order Models (ROM) of Effective One Body Waveforms~\cite{Puerrer14, Bohe+16}, and numerical relativity surrogates~\cite{Blackman+17b, Varma+18}. This progress has yet to be transposed to LISA applications.
 
-Here we demonstrate that standard Bayesian inference can be performed for SMBHBs using a self-consistent waveform model that includes inspiral, merger, ringdown and higher-order modes (albeit still simplified as spins are neglected) and a full model of the LISA response. We investigate and explain degeneracies in the posterior distribution of the source's parameters, and highlight the crucial role played by the higher harmonics in the signal and the frequency-dependency in the instrument response.
+Here we demonstrate that standard Bayesian inference can be performed for SMBHBs using a self-consistent waveform model that includes inspiral, merger, ringdown and higher-order modes (albeit no spins) and a full model of the LISA response. We investigate and explain degeneracies in the posterior distribution of the source's parameters, and highlight the crucial role played by the higher harmonics in the signal and the frequency-dependency in the instrument response.
 
-We start by introducing a fast method to calculate the likelihood for a black hole merger. This method includes: a fast computation of a Fourier-domain inspiral-merger-ringdown waveform with higher-order modes based on reduced-order modeling; a fast Fourier-domain computation of the LISA response based on~\cite{MB18}; and a fast method for computing the noise-weighted product between waveforms when setting the noise realization to zero. We couple our likelihood with two codes for Bayesian inference based on different sampling techniques, constructing an inference engine which will allow us in the future to perform a variety of investigations with simulated black hole mergers.
+We start by introducing a fast method to calculate the likelihood for a black hole merger. This method includes: a fast computation of a Fourier-domain inspiral-merger-ringdown waveform with higher-order modes based on ROM; a fast Fourier-domain computation of the LISA response based on~\cite{MB18}; and a fast method for computing the noise-weighted product between waveforms when setting the noise realization to zero. We couple our likelihood with two codes for Bayesian inference based on different sampling techniques, constructing an inference engine which enables us to perform a variety of investigations with simulated black hole mergers.
 
 Focusing on two examples of moderately massive black holes binaries, we perform Bayesian parameter estimation simulation for full, inspiral-merger-signals, and we show the crucial role of higher-order modes. We highlight the challenges we encounter in the sampling, and compare our two samplers with each other and with the Fisher matrix approximation. We explore degeneracies appearing between some of the parameters when ignoring these higher harmonics, and derive an analytic explanation of their origin via a simplified approximations to the instrument response. We show for our examples how the posterior distributions evolve over time as more and more data becomes available for the inference, and explain how degeneracies between different positions of the source in the sky are broken by features in the instrument response.
 
-Finally, we repeat some of our investigations for stellar-origin black hole mergers as well. Parameter estimation studies for SBHB systems have relied so far on the Fisher matrix approach~\cite{Sesana16, Vitale16, Nishizawa+16a, Nishizawa+16b}, with Bayesian inference tools yet to be developed. Focusing on the posterior distribution of extrinsic parameters (fixing the masses and time to coalescence), we demonstrate that Bayesian analyses can be run with a comparable speed for the likelihood computation and discuss the features of the posteriors.
+Finally, we repeat some of our investigations for stellar-origin black hole mergers. Parameter estimation studies for SBHB systems have relied so far on the Fisher matrix approach~\cite{Sesana16, Vitale16, Nishizawa+16a, Nishizawa+16b}, with Bayesian inference tools yet to be developed. Focusing on the posterior distribution of extrinsic parameters (fixing the masses and time to coalescence), we demonstrate that Bayesian analyses can be run with a comparable speed for the likelihood computation and discuss the features of the posteriors.
 
 Section~\ref{sec:response} introduces comprehensive notations for the frequency-domain signal and response, and Section~\ref{sec:method} explains our methods for likelihood computations and Bayesian sampling. Section~\ref{sec:SMBH} presents the SMBHB example signals that we analyze and their accumulation with time, together with their instrumental response in various approximations. In Section~\ref{sec:SMBHPE}, we present our main results for the parameter estimation of SMBHBs; we contrast results obtained with and without higher harmonics, contrast Fisher matrix with Bayesian results, describe and explain degeneracies in parameter space. In Section~\ref{sec:MBHBPEacctime}, we turn to the refinement of parameter estimation as the signal accumulates with ongoing observations, describing how multiple inferred sky positions can coexist before features of the full instrument response break the degeneracies. In Section~\ref{sec:SBHB}, we turn to the application of our fast likelihood computation to investigate extrinsic parameter inference of SBHBs. We summarize and discuss our findings in Section~\ref{sec:summarydiscussion}.
 
@@ -147,7 +147,7 @@ Section~\ref{sec:response} introduces comprehensive notations for the frequency-
 \section{LISA instrument response}
 \label{sec:response}
 
-In this section, we introduce a complete set of notations for the LISA instrument response that will be useful in the later discussion of degeneracies in parameter space. We will use units with $G=c=1$.
+In this section, we introduce a complete set of notations for the LISA instrument response that will be useful in the later discussion of degeneracies in parameter space. We will use units with $G=c=1$ and assume the proposed armlength for LISA $L = 2.5\mathrm{Gm}$~\cite{LISA2017}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -251,22 +251,22 @@ or explicitly in $P_{\ell m}$ as
 	P_{\ell m} (\iota, \varphi, \psi) &= \frac{1}{2} \sYlm(\iota, \varphi) e^{-2 i \psi} \left( P_{+}^{0} + i P_{\times}^{0} \right) \nn\\
 	& + \frac{1}{2} (-1)^{\ell} \sYlminusmstar (\iota, \varphi) e^{+2 i \psi} \left( P_{+}^{0} - i P_{\times}^{0} \right) \,.
 \end{align}
-Writing the $P_{\ell m}$ matrices in this way allows to factor out explicitly all dependencies in the extrinsic parameters $(\iota, \phi, \psi)$. Together with the luminosity distance $D$ scaling the overall amplitude of the signal, these parameters enter as constant (time and frequency independent) prefactors in the response for each mode $h_{\ell m}$.
+Writing the $P_{\ell m}$ matrices in this way allows us to factor out explicitly all dependencies in the extrinsic parameters $(\iota, \phi, \psi)$. Together with the luminosity distance $D$ scaling the overall amplitude of the signal, these parameters enter as constant (time and frequency independent) prefactors in the response for each mode $h_{\ell m}$.
 
-Since only $2\psi$ intervenes, the polarization $\psi$ has an exact $\pi$-degeneracy; by convention we set $\psi \in [0,\pi]$.
+Since $\psi$ always appears with a factor of 2, it has an exact $\pi$-degeneracy, and we choose the convention of restricting $\psi \in [0,\pi]$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Frequency domain LISA response}
 \label{subsec:FDresponse}
 
-The LISA response~\cite{EW75, Cutler97, Larson+99, CR02, RCP04} can be built from single-link observables $y_{slr} = (\nu_{r} - \nu_{s})/\nu$ representing a laser frequency shift between the sending spacecraft $s$ and the receiving spacecraft $r$ along the link $l$. We use the expression~\cite{Vallisneri04, Krolak+04}
+The LISA response~\cite{EW75, Cutler97, Larson+99, CR02, RCP04} can be built from single-link observables $y_{slr} = (\nu_{r} - \nu_{s})/\nu$ representing a laser frequency shift between the transmitting spacecraft $s$ and the receiving spacecraft $r$ along the link $l$. We use the expression~\cite{Vallisneri04, Krolak+04}
 \be\label{eq:defyslr}
 	y_{slr} = \frac{1}{2} \frac{n_{l} \otimes n_{l}}{1 - k\cdot n_{l}} : \left[ H(t - L - k\cdot p_{s}) - H(t - k\cdot p_{r}) \right] \,,
 \ee
-with $H$ the transverse-traceless matrix representing the gravitational wave, $L$ the delay along one arm\footnote{We recall that we use units with $G=c=1$. The proposed armlength for LISA is $L = 2.5\mathrm{Gm}$~\cite{LISA2017}.}, taken to be fixed, $k$ the propagation vector, $n_{l}$ the link unit vectors (from $s$ to $r$) and $p_{s}$, $p_{r}$ the positions of the spacecrafts. Here $n_{l}$, $p_{s}$ and $p_{r}$ are evaluated at the same time $t$.
+with $H$ the transverse-traceless matrix representing the gravitational wave, $L$ the delay along one arm, taken to be fixed, $n_{l}$ the link unit vectors (from $s$ to $r$) and $p_{s}$, $p_{r}$ the positions of the spacecrafts. Here $n_{l}$, $p_{s}$ and $p_{r}$ are evaluated at the same time $t$.
 
-In the frequency domain, modes will be represented with their amplitude and phase as\footnote{Note our Fourier convention~\eqref{eq:defFourier}.}
+In the frequency domain, modes will be represented with their amplitude and phase as
 \be\label{eq:hlmampphase}
 	\tilde{h}_{\ell m} (f) = A_{\ell m} (f) e^{-i\Psi_{\ell m} (f)}\,.
 \ee
@@ -297,7 +297,7 @@ We note an important feature of~\eqref{eq:Gslr}: frequency-dependent terms only 
 \ee
 with $k_{\parallel}$ the projection of the wave vector $k$ in the (instantaneous) LISA plane, thus the frequency-dependent factors are invariant when we reflect $k$ across this plane. This will remain true when constructing TDI variables below\footnote{Strictly speaking it will not be true in the most general response formalism of~\cite{MB18}, where corrections are either slightly non-local in time or involve velocities, that are out of the LISA plane.}. We will investigate sky degeneracies in detail in Sections~\ref{subsec:MBHBPEdegen} and~\ref{subsec:MBHBacctimebreakdegen}.
 
-In~\eqref{eq:defyslr} and~\eqref{eq:Gslr}, one can distinguish two types of delays: on one hand the delay associated to the position $p_{0}$ of the center of the constellation on its orbit around the Sun, with baseline $R=1 \au$, and on the other hand the delays associated to the individual spacecraft positions in the constellation, with baseline the armlength $L=2.5 \cdot 10^{6 }\mathrm{km}$. This defines the transfer frequencies
+In~\eqref{eq:defyslr} and~\eqref{eq:Gslr}, one can distinguish two types of delays: on one hand the delay associated to the position $p_{0}$ of the center of the constellation on its orbit around the Sun, with baseline $R=1 \au$, and on the other hand the delays associated to the individual spacecraft positions in the constellation, with baseline the armlength $L$. This defines the transfer frequencies
 \bsub\label{eq:transferfrequencies}
 \begin{align}
 	f_{R} &= 1/R = 2.0\times10^{-3}\Hz \,,\\
